# daiv

./: .coveragerc  .daiv.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .worktreeinclude  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  Pipfile  Provide a code review for the given merg.md  README.md  context7.json  daiv-acp.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  versions.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml  docs.yml
aequatioai/: manage.py
aequatioai/accounts/: forms.py  models.py  utils.py  views.py
aequatioai/aequatioai/: api.py  asgi.py  celery.py  celeryapp.py  urls.py  wsgi.py
aequatioai/automation/: utils.py
aequatioai/codebase/: apps.py  base.py  clients.py  conf.py  document_loaders.py  indexers.py  indexes.py  models.py  reranker.py  tasks.py
aequatioai/templates/: index.html
daiv/: manage.py
daiv/accounts/: adapter.py  allauth_urls.py  apps.py  context_processors.py  crypto.py  emails.py  filters.py  forms.py  managers.py  mixins.py  models.py  socialaccount.py  urls.py  utils.py  views.py
daiv/activity/: apps.py  filters.py  forms.py  models.py  services.py  signals.py  urls.py  urls_runs.py  views.py
daiv/automation/: __init__.py  apps.py  checks.py  conf.py  constants.py  retrievers.py  tools.py  urls.py  utils.py  views.py
daiv/chat/: apps.py  conf.py  managers.py  models.py  repo_state.py  turns.py  urls.py  usage.py  views.py
daiv/codebase/: api.py  apps.py  authorization.py  base.py  checks.py  clients.py  conf.py  context.py  document_loaders.py  exceptions.py  indexes.py  models.py  mr_state.py  repo_config.py  reranker.py  signals.py  tasks.py  urls.py  utils.py  views.py
daiv/core/: __init__.py  apps.py  cache.py  checkpointer.py  conf.py  config.py  constants.py  encryption.py  forms.py  htmx.py  log_filters.py  models.py  sandbox.py  site_settings.py  tasks.py  urls.py  utils.py  views.py
daiv/daiv/: __init__.py  api.py  asgi.py  celeryapp.py  urls.py  wsgi.py
daiv/jobs/: conf.py  tasks.py  throttle.py
daiv/mcp_server/: apps.py  auth.py  conf.py  oauth.py  server.py
daiv/mcp_servers/: apps.py  constants.py  filters.py  forms.py  models.py  seeds.py  services.py  urls.py  validators.py  views.py
daiv/memory/: apps.py  filters.py  models.py  prompts.py  schemas.py  signals.py  tasks.py  transcript.py  urls.py  views.py
daiv/notifications/: apps.py  choices.py  context_processors.py  exceptions.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
daiv/public/: llms.txt  robots.txt  site.webmanifest
daiv/quick_actions/: apps.py  base.py  decorator.py  parser.py  registry.py  tasks.py  templates.py
daiv/sandbox_envs/: __init__.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
daiv/schedules/: apps.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
daiv/sessions/: apps.py  backfill.py  classification.py  envelopes.py  filters.py  forms.py  hydration.py  locks.py  managers.py  models.py  queue.py  reconcile.py  redirect_views.py  services.py  signals.py  tasks.py  transcript.py  urls.py  urls_legacy.py  urls_runs.py  views.py
daiv/skills/: apps.py  constants.py  forms.py  models.py  services.py  urls.py  views.py
daiv/slash_commands/: __init__.py  apps.py  base.py  decorator.py  parser.py  registry.py
daiv/templates/: base.html  index.html
data/: .gitignore
data/certs/: cert.crt  cert.key
data/neo4j/: .gitignore
dev/: 404.html  index.html  llms-full.txt  llms.txt  sitemap.xml
dev/community/: index.html  index.md
dev/configurations/: index.html
dev/getting-started/: index.html
dev/search/: search_index.json
docker/production/: README.md
docs/: community.md  configurations.md  get-started.md  getting-started.md  index.md
docs/ai-agents/: code-review-addressor.md  codebase-chat.md  issue-addressor.md  mcp-tools.md  overview.md  pipeline-fixing.md  quick-actions.md  skills.md  supported-providers.md
docs/assets/: extra.css
docs/configuration/: env-config.md  monitoring.md  yaml-config.md
docs/customization/: agent-skills.md  mcp-tools.md  repository-config.md
docs/features/: activity-tracking.md  chat.md  issue-addressing.md  issue-addressor.md  jobs-api.md  mcp-endpoint.md  merge-metrics.md  notifications.md  orchestration.md  pull-request-assistant.md  quick-actions.md  review-addressor.md  sandbox-environments.md  sandbox.md  scheduled-jobs.md  sessions.md  slash-commands.md  subagents.md
docs/getting-started/: accounts.md  configuration.md  deployment.md  environment-variables.md  installation.md  llm-providers.md  monitoring.md  platform-setup.md  repository-configurations.md  supported-providers.md  up-and-running.md
docs/reference/: agent-architecture.md  env-variables.md  monitoring.md  site-configuration.md
evals/: conftest.py  evaluators.py  swebench.py  test_codebase_chat.py  test_codebase_search.py  test_plan_and_execute.py  test_pr_describer.py  test_review_addressor.py
notebooks/: codebase-chat.ipynb  codebase-graph.ipynb  issue-addressor-agent.ipynb  pipeline-fixer-agent.ipynb  pr-describer-agent.ipynb  review-addressor-agent.ipynb
plans/: 2026-07-09-clarify-session-creation.md
specs/: 2026-07-09-clarify-session-creation-design.md  2026-07-22-code-review-robustness-design.md
tests/: conftest.py
tests/accounts/: test_models.py
tests/automation/: test_utils.py
tests/codebase/: test_base.py  test_config.py  test_utils.py  test_utils_daiv.py
tests/core/: test_cache.py  (+2 more)
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.2/: 404.html  index.html  sitemap.xml
v0.1.3/: 404.html  index.html  sitemap.xml
v0.1.4/: 404.html  index.html  sitemap.xml
v0.1.5/: 404.html  index.html  sitemap.xml
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.1/: 404.html  index.html  sitemap.xml
v0.3.0/: 404.html  index.html  sitemap.xml
v1.0.0/: 404.html  index.html  sitemap.xml
v1.1.0/: 404.html  index.html  sitemap.xml
v2.0.0/: 404.html  index.html  sitemap.xml
(+1649 files in other folders)
